# RTOSploit

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  USAGE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
configs/fuzzer/: default.yaml  fast.yaml  thorough.yaml
configs/machines/: esp32.yaml  lm3s6965evb.yaml  lm3s811evb.yaml  microbit.yaml  mps2-an385.yaml  mps2-an505.yaml  musca-a.yaml  netduinoplus2.yaml  nrf51dk.yaml  raspi2b.yaml  sifive_e.yaml  sifive_u.yaml  stm32f4.yaml
configs/peripherals/: generic_arm.yaml  stm32f4_hal.yaml
configs/rtos/: freertos.yaml  threadx.yaml  zephyr.yaml
crates/rtosploit-fuzzer/: Cargo.toml
crates/rtosploit-fuzzer/src/: config.rs  corpus.rs  coverage.rs  crash.rs  engine.rs  harness.rs  lib.rs  mmio.rs  mutators.rs  report.rs
crates/rtosploit-payloads/: Cargo.toml
crates/rtosploit-payloads/src/: encoder.rs  lib.rs
crates/rtosploit-payloads/src/rop/: chain.rs  filter.rs  gadget.rs  mod.rs
crates/rtosploit-payloads/src/shellcode/: mod.rs  riscv.rs  thumb2.rs
crates/rtosploit-svd/: Cargo.toml
crates/rtosploit-svd/src/: lib.rs  main.rs  parser.rs  registry.rs  stub.rs
docs/: architecture.md  ci-integration.md  coverage.md  crash-triage.md  cve-correlation.md  installation.md  quickstart.md  reporting.md  writing-exploits.md  writing-scanners.md  writing-vulnranges.md
rtosploit/: __init__.py  config.py  errors.py
rtosploit/analysis/: __init__.py  fingerprint.py  heap_detect.py  mpu_check.py  strings.py
rtosploit/analysis/detection/: __init__.py  aggregator.py  evidence.py  layer_devicetree.py  layer_register.py  layer_relocation.py  layer_signature.py  layer_string.py  layer_symbol.py  signatures.py  vendor_maps.py
rtosploit/ci/: __init__.py  pipeline.py
rtosploit/cli/: __init__.py  main.py
rtosploit/cli/commands/: __init__.py  analyze.py  console_cmd.py  coverage.py  cve.py  debug_crash.py  emulate.py  exploit.py  fuzz.py  payload.py  rehost.py  report.py  scan.py  scan_vuln.py  svd.py  triage.py  vulnrange.py
rtosploit/console/: __init__.py  repl.py  state.py
rtosploit/coverage/: __init__.py  bitmap.py  bitmap_reader.py  mapper.py  visualizer.py
rtosploit/coverage/templates/: coverage.html.j2
rtosploit/cve/: __init__.py  bundled_cves.json  correlator.py  database.py  nvd_client.py
rtosploit/emulation/: __init__.py  backtrace.py  gdb.py  machines.py  memory.py  qemu.py  qmp.py  snapshot.py
rtosploit/exploits/: __init__.py  base.py  registry.py  runner.py  runtime_bridge.py  target.py
rtosploit/exploits/freertos/: heap_overflow.py  isr_hijack.py  mpu_bypass.py  mpu_bypass_rop.py  tcb_overwrite.py  tcp_stack.py
rtosploit/exploits/threadx/: __init__.py  byte_pool.py  kom.py  thread_entry.py
rtosploit/exploits/zephyr/: __init__.py  ble_cve_2023_4264.py  ble_cve_2024_6135.py  ble_cve_2024_6442.py  ble_overflow.py  syscall_race.py  userspace_off.py
rtosploit/fuzzing/: __init__.py  corpus.py  crash_reporter.py  engine.py  execution.py  fuzz_input.py  input_injector.py  mutator.py  unicorn_worker.py
rtosploit/instrumentation/: __init__.py  bus.py  events.py  peripheral_resolver.py  telemetry.py  trace_writer.py
rtosploit/interactive/: __init__.py  app.py  banner.py  dashboard.py  firmware_loader.py  menus.py  session.py
rtosploit/interactive/handlers/: __init__.py  analysis.py  coverage.py  cve.py  emulation.py  exploits.py  fuzzing.py  payload.py  rehost.py  reporting.py  scanners.py  scanning.py  svd_ops.py  triage.py  vulnrange.py
rtosploit/payloads/: __init__.py  rop.py  shellcode.py
rtosploit/peripherals/: __init__.py  auto_config.py  config.py  dispatcher.py  hal_database.py  interrupt_injector.py  interrupt_scheduler.py  mmio_intercept.py  model.py  pip_handler.py  rehost.py  svd_cache.py  svd_model.py  svd_parser.py  unicorn_engine.py
rtosploit/peripherals/models/: __init__.py  generic.py  mmio_fallback.py  nrf5_hal.py  (+3 more)
rtosploit/reporting/: __init__.py  html.py  models.py  sarif.py
rtosploit/scanners/: __init__.py  base.py  registry.py  runner.py  runtime_bridge.py  target.py
rtosploit/triage/: __init__.py  classifier.py  minimizer.py  pipeline.py
rtosploit/utils/: __init__.py  binary.py  disasm.py  memory_map.py  packing.py
rtosploit/vulnrange/: __init__.py  manager.py  manifest.py
scripts/: bump-version.sh  release.sh  setup-qemu.sh
test-firmware/qemu-demos/: freertos-mps2-an385.elf  vuln-firmware.elf
tests/: dynamic_test_report.md
tests/integration/: conftest.py  test_e2e_qemu.py  test_fuzz_integration.py  test_qemu.py  test_rehost_integration.py  test_scan.py
tests/unit/: test_analysis.py  test_auto_config.py  test_backtrace.py  test_ci_pipeline.py  test_cli.py  test_console.py  test_corpus.py  test_coverage_bitmap.py  test_coverage_viz.py  test_crash_context.py  test_crash_reporter.py  test_cve.py  test_debug_crash.py  test_detection_aggregator.py  test_detection_evidence.py  test_detection_integration.py  test_detection_layers.py  test_detection_register.py  test_docs.py  test_emulation.py  test_execution_result.py  test_exploits.py  test_freertos_exploits.py  test_freertos_scanners.py  test_fuzz_engine.py  test_fuzz_input.py  test_fuzz_parallel.py  test_gdb_breakpoints.py  test_gdb_enhancements.py  test_hal_database.py  test_input_injector.py  test_instrumentation.py  test_integration.py  test_interactive.py  test_interrupt_injector.py  test_interrupt_scheduler.py  test_mmio_fallback.py  test_mmio_intercept.py  test_mutator.py  test_nrf5_models.py  (+25 more)
vulnrange/: Makefile  build_firmware.py  mps2-an385.ld
vulnrange/CVE-2018-16525/: exploit.py  manifest.yaml  qemu.yaml  writeup.md
vulnrange/CVE-2018-16528/: exploit.py  manifest.yaml  qemu.yaml  writeup.md
vulnrange/CVE-2021-43997/: exploit.py  manifest.yaml  qemu.yaml  writeup.md
vulnrange/CVE-2024-28115/: exploit.py  manifest.yaml  qemu.yaml  writeup.md
vulnrange/CVE-2025-5688/: exploit.py  manifest.yaml  writeup.md
vulnrange/KOM-ThreadX/: exploit.py  manifest.yaml  qemu.yaml  writeup.md
(+17 files in other folders)
