[workspace]
members = [
    "crates/rtosploit-fuzzer",
    "crates/rtosploit-svd",
    "crates/rtosploit-payloads",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Indspl0it/RTOSploit"
authors = ["Santhosh Ballikonda"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
