[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtosploit"
dynamic = ["version"]
description = "RTOS Exploitation & Bare-Metal Fuzzing Framework"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
authors = [
    {name = "Santhosh Ballikonda"},
]
keywords = ["security", "fuzzing", "embedded", "rtos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pyelftools>=0.30",
    "capstone>=5.0",
    "jinja2>=3.1",
    "prompt_toolkit>=3.0",
    "questionary>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
    "maturin>=1.0",
]

[project.scripts]
rtosploit = "rtosploit.cli.main:main"

[project.urls]
Homepage = "https://github.com/Indspl0it/RTOSploit"
Repository = "https://github.com/Indspl0it/RTOSploit"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

# Maturin configuration for building optional Rust/PyO3 extensions.
# The default build backend remains Hatchling (pure-Python). Use Maturin
# when you need to compile the Rust native module (rtosploit._native):
#   maturin develop --release
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "rtosploit._native"
manifest-path = "Cargo.toml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
