[package]
name = "rtosploit-fuzzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage-guided bare-metal RTOS firmware fuzzer"

[lib]
name = "rtosploit_fuzzer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = []
qemu = []  # Enable actual QEMU executor integration
